--- a/dodge/index.html
+++ b/dodge/index.html
@@ -12,7 +12,7 @@
     <style>
         html, body {
             -ms-touch-action: none;
-            background: #888888;
+            background: #000;
             padding: 0;
             border: 0;
             margin: 0;
@@ -36,8 +36,20 @@
 
     <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
-	<script egret="game" src="bin-debug/LoadingUI.js"></script>
+	<script egret="game" src="bin-debug/Entities/GameObject.js"></script>
+	<script egret="game" src="bin-debug/Entities/Deer.js"></script>
+	<script egret="game" src="bin-debug/Entities/Enemy.js"></script>
+	<script egret="game" src="bin-debug/Entities/EntityFactory.js"></script>
+	<script egret="game" src="bin-debug/Entities/Hero.js"></script>
+	<script egret="game" src="bin-debug/Entities/Item.js"></script>
+	<script egret="game" src="bin-debug/Entities/Player.js"></script>
+	<script egret="game" src="bin-debug/Events/Event.js"></script>
+	<script egret="game" src="bin-debug/KeyboardController.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/Views/LoadingUI.js"></script>
+	<script egret="game" src="bin-debug/Views/MainScene.js"></script>
+	<script egret="game" src="bin-debug/Views/ScoreBoard.js"></script>
+	<script egret="game" src="bin-debug/Views/WelcomeScene.js"></script>
 	<!--game_files_end-->
 </head>
 <body>
@@ -45,11 +57,11 @@
     <div style="margin: auto;width: 100%;height: 100%;" class="egret-player"
          data-entry-class="Main"
          data-orientation="auto"
-         data-scale-mode="showAll"
+         data-scale-mode="fixedNarrow"
          data-frame-rate="30"
-         data-content-width="640"
-         data-content-height="1136"
-         data-show-paint-rect="false"
+         data-content-width="1136"
+         data-content-height="640"
+         data-show-paint-rect="true"
          data-multi-fingered="2"
          data-show-fps="false" data-show-log="false"
          data-show-fps-style="x:0,y:0,size:12,textColor:0xffffff,bgAlpha:0.9">
