完成了基本的游戏逻辑,碰撞检测,对象回收,游戏结束之后重新开始游戏的重新初始化的问题

--- a/dodge/index.html
+++ b/dodge/index.html
@@ -38,14 +38,15 @@
     <!--game_files_start-->
 	<script egret="game" src="bin-debug/Entities/GameObject.js"></script>
 	<script egret="game" src="bin-debug/Entities/Deer.js"></script>
-	<script egret="game" src="bin-debug/Entities/Enemy.js"></script>
 	<script egret="game" src="bin-debug/Entities/EntityFactory.js"></script>
 	<script egret="game" src="bin-debug/Entities/Hero.js"></script>
 	<script egret="game" src="bin-debug/Entities/Item.js"></script>
+	<script egret="game" src="bin-debug/Entities/Medicine.js"></script>
 	<script egret="game" src="bin-debug/Entities/Player.js"></script>
 	<script egret="game" src="bin-debug/Events/Event.js"></script>
 	<script egret="game" src="bin-debug/KeyboardController.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/Utils/Utils.js"></script>
 	<script egret="game" src="bin-debug/Views/LoadingUI.js"></script>
 	<script egret="game" src="bin-debug/Views/MainScene.js"></script>
 	<script egret="game" src="bin-debug/Views/ScoreBoard.js"></script>
