--- a/dodge/index.html
+++ b/dodge/index.html
@@ -37,6 +37,7 @@
     <!--这个标签会被替换为项目中所有的 javascript 文件。删除 game_files 标签后，项目文件加载列表将不会变化，请谨慎操作！-->
     <!--game_files_start-->
 	<script egret="game" src="bin-debug/Entities/GameObject.js"></script>
+	<script egret="game" src="bin-debug/Entities/Bubble.js"></script>
 	<script egret="game" src="bin-debug/Entities/Deer.js"></script>
 	<script egret="game" src="bin-debug/Entities/EntityFactory.js"></script>
 	<script egret="game" src="bin-debug/Entities/Hero.js"></script>
@@ -46,6 +47,7 @@
 	<script egret="game" src="bin-debug/Events/Event.js"></script>
 	<script egret="game" src="bin-debug/KeyboardController.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/Recorder.js"></script>
 	<script egret="game" src="bin-debug/Utils/Utils.js"></script>
 	<script egret="game" src="bin-debug/Views/LoadingUI.js"></script>
 	<script egret="game" src="bin-debug/Views/MainScene.js"></script>
