--- a/dodge/index.html
+++ b/dodge/index.html
@@ -45,9 +45,12 @@
 	<script egret="game" src="bin-debug/Entities/Medicine.js"></script>
 	<script egret="game" src="bin-debug/Entities/Player.js"></script>
 	<script egret="game" src="bin-debug/Events/Event.js"></script>
+	<script egret="game" src="bin-debug/Harm/Harm.js"></script>
+	<script egret="game" src="bin-debug/Harm/CommonHarm.js"></script>
+	<script egret="game" src="bin-debug/Harm/HarmCalculator.js"></script>
 	<script egret="game" src="bin-debug/KeyboardController.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
-	<script egret="game" src="bin-debug/Recorder.js"></script>
+	<script egret="game" src="bin-debug/Utils/Recorder.js"></script>
 	<script egret="game" src="bin-debug/Utils/Utils.js"></script>
 	<script egret="game" src="bin-debug/Views/LoadingUI.js"></script>
 	<script egret="game" src="bin-debug/Views/MainScene.js"></script>
