地图载入模块基本完成,还需调整

--- a/dodge/index.html
+++ b/dodge/index.html
@@ -39,21 +39,24 @@
 	<script egret="game" src="bin-debug/Entities/GameObject.js"></script>
 	<script egret="game" src="bin-debug/Entities/Bubble.js"></script>
 	<script egret="game" src="bin-debug/Entities/Deer.js"></script>
+	<script egret="game" src="bin-debug/Entities/Medicine.js"></script>
 	<script egret="game" src="bin-debug/Entities/EntityFactory.js"></script>
 	<script egret="game" src="bin-debug/Entities/Hero.js"></script>
 	<script egret="game" src="bin-debug/Entities/Item.js"></script>
-	<script egret="game" src="bin-debug/Entities/Medicine.js"></script>
 	<script egret="game" src="bin-debug/Entities/Player.js"></script>
 	<script egret="game" src="bin-debug/Events/Event.js"></script>
 	<script egret="game" src="bin-debug/Harm/Harm.js"></script>
 	<script egret="game" src="bin-debug/Harm/CommonHarm.js"></script>
 	<script egret="game" src="bin-debug/Harm/HarmCalculator.js"></script>
-	<script egret="game" src="bin-debug/KeyboardController.js"></script>
 	<script egret="game" src="bin-debug/Main.js"></script>
+	<script egret="game" src="bin-debug/Utils/KeyboardController.js"></script>
+	<script egret="game" src="bin-debug/Utils/MapReader.js"></script>
 	<script egret="game" src="bin-debug/Utils/Recorder.js"></script>
 	<script egret="game" src="bin-debug/Utils/Utils.js"></script>
 	<script egret="game" src="bin-debug/Views/LoadingUI.js"></script>
+	<script egret="game" src="bin-debug/Views/MainBackground.js"></script>
 	<script egret="game" src="bin-debug/Views/MainScene.js"></script>
+	<script egret="game" src="bin-debug/Views/MainUI.js"></script>
 	<script egret="game" src="bin-debug/Views/ScoreBoard.js"></script>
 	<script egret="game" src="bin-debug/Views/WelcomeScene.js"></script>
 	<!--game_files_end-->
