加入随机生成

--- a/dodge/index.html
+++ b/dodge/index.html
@@ -51,6 +51,7 @@
 	<script egret="game" src="bin-debug/Main.js"></script>
 	<script egret="game" src="bin-debug/Utils/KeyboardController.js"></script>
 	<script egret="game" src="bin-debug/Utils/MapReader.js"></script>
+	<script egret="game" src="bin-debug/Utils/MazeGenerator.js"></script>
 	<script egret="game" src="bin-debug/Utils/Recorder.js"></script>
 	<script egret="game" src="bin-debug/Utils/Utils.js"></script>
 	<script egret="game" src="bin-debug/Views/LoadingUI.js"></script>
